--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -1,22 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <variable
+            name="country"
+            type="com.example.kotlincountries.model.Country" />
+        <variable
+            name="listener"
+            type="com.example.kotlincountries.adapter.CountryClickListener" />
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:orientation="horizontal"
+        android:onClick="@{listener::onCountryClicked}"
         android:layout_margin="5dp">
+        
+        <TextView
+            android:id="@+id/countryUuidText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="@{String.valueOf(country.uuid)}" />
 
         <ImageView
+            android:downloadImage="@{country.imageUrl}"
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:padding="3dp"
-            android:contentDescription="@string/image"
-            android:src="@mipmap/ic_launcher"/>
+            android:contentDescription="@string/image" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -29,7 +45,7 @@
                 android:id="@+id/country"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name"
+                android:text="@{country.countryName}"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:padding="4dp"
@@ -38,7 +54,7 @@
                 android:id="@+id/region"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Region"
+                android:text="@{country.countryRegion}"
                 android:textSize="16sp"
                 android:padding="4dp"
                 android:layout_margin="3dp"/>
