--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -4,7 +4,7 @@
 
     <data>
         <variable
-            name="country"
+            name="countries"
             type="com.example.kotlincountries.model.Country" />
         <variable
             name="listener"
@@ -23,10 +23,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            android:text="@{String.valueOf(country.uuid)}" />
+            android:text="@{String.valueOf(countries.uuid)}" />
 
         <ImageView
-            android:downloadImage="@{country.imageUrl}"
+            android:downloadImage="@{countries.imageUrl}"
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -45,7 +45,7 @@
                 android:id="@+id/country"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{country.countryName}"
+                android:text="@{countries.countryName}"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:padding="4dp"
@@ -54,7 +54,7 @@
                 android:id="@+id/region"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{country.countryRegion}"
+                android:text="@{countries.countryRegion}"
                 android:textSize="16sp"
                 android:padding="4dp"
                 android:layout_margin="3dp"/>
